intentando solucionar errores

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -28,10 +28,9 @@
             <h2 class="titulo-carrito">Carrito</h2>
             <div class="contenido-carrito">
                 <p id="carrito-vacio" class="carrito-vacio">No hay productos agregados al carrito.</p>
-                <div id="productos-carrito" class="productos-carrito desactivado">
-                    <p>Hola</p>
+                <div id="productos-carrito" class="productos-carrito">
                    <!-- Los productos los rellena JS -->
-                <div id="carrito-acciones" class="carrito-acciones desactivado">
+                <div id="carrito-acciones" class="carrito-acciones">
                     <div class="acciones-izquierda">
                         <button class="acciones-vaciar">Vaciar carrito</button>
                     </div>
@@ -43,7 +42,7 @@
                         <button class="acciones-comprar">Finalizar compra</button>
                     </div>
                 </div>
-                <p id="carrrito-comprado" class="carrito-comprado desactivado">¡Muchas gracias por su compra!</p>
+                <p id="carrrito-comprado" class="carrito-comprado">¡Muchas gracias por su compra!</p>
             </div>
         </main>
     </div>
