--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/fafe08d498.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <title>Carrito</title>
 </head>
 <body>
@@ -30,24 +31,26 @@
                 <p id="carrito-vacio" class="carrito-vacio">No hay productos agregados al carrito.</p>
                 <div id="productos-carrito" class="productos-carrito">
                    <!-- Los productos los rellena JS -->
-                <div id="carrito-acciones" class="carrito-acciones">
+                <div id="carrito-acciones" class="carrito-acciones desactivado">
                     <div class="acciones-izquierda">
-                        <button class="acciones-vaciar">Vaciar carrito</button>
+                        <button id = "acciones-vaciar" class="acciones-vaciar">Vaciar carrito</button>
                     </div>
                     <div class="acciones-derecha">
                         <div class="acciones-total">
                             <p>Total:</p>
                             <p id="total">$2600</p>
                         </div>
-                        <button class="acciones-comprar">Finalizar compra</button>
+                        <button id= "acciones-comprar" class="acciones-comprar">Finalizar compra</button>
                     </div>
                 </div>
-                <p id="carrrito-comprado" class="carrito-comprado">¡Muchas gracias por su compra!</p>
+                <p id="carrito-comprado" class="carrito-comprado">¡Muchas gracias por su compra!</p>
             </div>
         </main>
     </div>
 
-<script src="../js/main.js"></script>
-<script src="../js/carrito.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="../js/main.js"></script>
+    <script src="../js/carrito.js"></script>
 </body>
 </html>
