--- a/pages/resenas.html
+++ b/pages/resenas.html
@@ -13,12 +13,12 @@
 </head>
 <body>
     <header>
-        <a href="../index.html" class="logo"><img src="../fotos/LogoBlancoSF.png" height="90px"></a>
+        <a href="../pages/inicio.html" class="logo"><img src="../fotos/LogoBlancoSF.png" height="90px"></a>
         <nav class="barra">
             <ul>
-                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../pages/inicio.html">Inicio</a></li>
                 <li><a href="../pages/resenas.html">Reseñas</a></li>
-                <li><a href="../pages/tienda.html">Tienda</a></li>
+                <li><a href="../index.html">Tienda</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
