--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -39,7 +39,7 @@
                     <div class="acciones-derecha">
                         <div class="acciones-total">
                             <p>Total:</p>
-                            <p id="total">$2600</p>
+                            <p id="total" class="total">$0</p>
                         </div>
                         <button id= "acciones-comprar" class="acciones-comprar">Finalizar compra</button>
                     </div>
